--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "_from": "react-native-paypal-reborn@1.1",
-  "_id": "react-native-paypal-reborn@1.1.0",
+  "_from": "react-native-paypal-reborn@1.0.0",
+  "_id": "react-native-paypal-reborn@1.0.0",
   "_inBundle": false,
-  "_integrity": "sha512-Rr+Q7cQaGXc29EZGbmKHPJ5QYoVmNHvHp2bLPQkd31IHWPB6RnAKX6+dyHT72YsN2xGER2TcW9xO1O9rkGKitg==",
+  "_integrity": "sha512-pDq7wVoePy6N2sRUAlThlFVcxrHcrvKjp45cl9mmHyYCf6aSaimoiQCSTWtDCD+lsOIirK/gjv5R9juUktfJBg==",
   "_location": "/react-native-paypal-reborn",
   "_phantomChildren": {},
   "_requested": {
-    "type": "range",
+    "type": "version",
     "registry": true,
-    "raw": "react-native-paypal-reborn@1.1",
+    "raw": "react-native-paypal-reborn@1.0.0",
     "name": "react-native-paypal-reborn",
     "escapedName": "react-native-paypal-reborn",
-    "rawSpec": "1.1",
+    "rawSpec": "1.0.0",
     "saveSpec": null,
-    "fetchSpec": "1.1"
+    "fetchSpec": "1.0.0"
   },
   "_requiredBy": [
     "#USER",
     "/"
   ],
-  "_resolved": "https://registry.npmjs.org/react-native-paypal-reborn/-/react-native-paypal-reborn-1.1.0.tgz",
-  "_shasum": "b8a781df3e345f86313f3be2b1793873ebbf0168",
-  "_spec": "react-native-paypal-reborn@1.1",
+  "_resolved": "https://registry.npmjs.org/react-native-paypal-reborn/-/react-native-paypal-reborn-1.0.0.tgz",
+  "_shasum": "99221c3fc9d37088c9209f9afa27ee3782373bfe",
+  "_spec": "react-native-paypal-reborn@1.0.0",
   "_where": "C:\\xampp\\htdocs\\Sysge24\\app",
   "author": {
     "name": "Maciej Sasinowski"
@@ -33,9 +33,9 @@
   "deprecated": "This project has been renamed. Install using react-native-expo-braintree instead. https://www.npmjs.com/package/react-native-expo-braintree",
   "description": "React Native library that implements PayPal Checkout flow using purely native code",
   "devDependencies": {
-    "@commitlint/cli": "^18.6.1",
-    "@commitlint/config-conventional": "^18.6.2",
-    "husky": "^9.0.11"
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
+    "husky": "^8.0.0"
   },
   "homepage": "https://github.com/msasinowski/react-native-paypal-reborn#readme",
   "keywords": [
@@ -63,5 +63,5 @@
     "prepare": "husky install"
   },
   "typings": "index.d.ts",
-  "version": "1.1.0"
+  "version": "1.0.0"
 }
